--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "aushwin",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/monitoring": "^2.3.1",
+    "@google-cloud/storage": "^5.8.5",
     "nodemailer": "^6.6.1",
     "request": "^2.88.2"
   }
